# bpp-mcp

./: .gitignore  .pre-commit-config.yaml  LICENSE  README.md  mkdocs.yml  pyproject.toml
.github/workflows/: docs.yml  release.yml  tests.yml
docs/: djangoql.md  index.md  instalacja.md  konfiguracja.md  narzedzia.md  rozwoj.md  uwierzytelnianie.md
docs/_snippets/: env-block.md  path-caveat.md  stdio-vs-http.md  uvx-cmd.md
docs/klienci/: chatgpt.md  claude-code.md  claude-desktop.md  cursor.md  deepseek.md  index.md  inne.md  lm-studio.md  opencode.md  vscode-copilot.md  windsurf.md  zed.md
docs/superpowers/plans/: 2026-07-11-mcp-oauth-resource-server.md  2026-07-11-mcp-oauth-stdio-login.md
docs/superpowers/specs/: 2026-07-11-mcp-oauth-resource-server-design.md  2026-07-11-mcp-oauth-stdio-login-design.md  2026-07-22-djangoql-schema-porcjowanie-design.md  2026-07-22-pypi-trusted-publishing-design.md  2026-07-24-dokumentacja-mkdocs-design.md
src/bpp_mcp/: __init__.py  auth.py  catalog.py  client.py  config.py  login_state.py  oauth_client.py  schemat.py  server.py  token_store.py  tools.py
tests/: conftest.py  test_auth.py  test_cli.py  test_client.py  test_client_auth.py  test_config.py  test_djangoql_schema.py  test_http_auth.py  test_lista_publikacji.py  test_login_state.py  test_oauth_client.py  test_oauth_login.py  test_pobierz_rekord.py  test_publikacje_autora.py  test_publikacje_jednostki.py  test_schemat.py  test_server.py  test_slownik.py  test_stdio_login.py  test_szukaj_autora.py  test_szukaj_publikacji.py  test_token_store.py  test_zapytanie.py
