[project]
name = "bpp-mcp"
version = "0.1.1"
description = "Serwer MCP dla API BPP (Bibliografia Publikacji Pracowników)"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [
    { name = "IPLWeb / Michał Pasternak", email = "michal.dtz@gmail.com" },
]
keywords = ["bpp", "mcp", "bibliografia", "api", "llm"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
]
dependencies = [
    "mcp[cli]>=1.28.0",
    "httpx>=0.27",
]

[project.urls]
Homepage = "https://github.com/iplweb/bpp-mcp"
Repository = "https://github.com/iplweb/bpp-mcp"

[project.scripts]
bpp-mcp = "bpp_mcp.server:main"

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "respx>=0.21",
    "ruff>=0.6",
]
# `mkdocs-material` ciągnie już `pymdown-extensions` i `mkdocs`, więc nie
# dublujemy ich tutaj. Podgląd lokalny: `uv run --extra docs mkdocs serve`.
docs = [
    "mkdocs-material>=9.5",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

# `packages = ["src/bpp_mcp"]` wciąga CAŁĄ zawartość pakietu, w tym zasoby
# danych spod `bpp_mcp/data/` (schemat DjangoQL-dla-LLM, *.txt) — hatchling
# domyślnie pakuje wszystkie pliki pakietu, nie tylko *.py. `artifacts`
# dokłada bezpiecznik, gdyby plik danych trafił kiedyś pod wykluczenie VCS.
[tool.hatch.build.targets.wheel]
packages = ["src/bpp_mcp"]
artifacts = ["src/bpp_mcp/data/*.txt"]

[tool.hatch.build.targets.sdist]
include = ["src/bpp_mcp", "tests", "README.md", "LICENSE"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.ruff]
line-length = 88
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "W", "UP", "B"]

[tool.ruff.lint.isort]
known-first-party = ["bpp_mcp", "conftest"]
